[gd_scene load_steps=28 format=3 uid="uid://ce7hf8flai85b"]

[ext_resource type="Script" path="res://assets/scenes/player/player.gd" id="1_tt18g"]
[ext_resource type="PackedScene" uid="uid://c0a71s75g5xh8" path="res://assets/scenes/player/clipboard/clipboard.tscn" id="2_cv7uu"]
[ext_resource type="AudioStream" uid="uid://cl088q7y5jlsq" path="res://assets/sounds/footsteps/footstep1.mp3" id="3_a0wnv"]
[ext_resource type="AudioStream" uid="uid://d0ndj6s2g7i1h" path="res://assets/sounds/footsteps/footstep2.mp3" id="4_0rtyy"]
[ext_resource type="AudioStream" uid="uid://cdj3yilheeuyk" path="res://assets/sounds/footsteps/footstep11.mp3" id="5_fpe8j"]
[ext_resource type="AudioStream" uid="uid://csepyvmjj1u5f" path="res://assets/sounds/footsteps/footstep12.mp3" id="6_7eb87"]
[ext_resource type="AudioStream" uid="uid://benolathu7m7v" path="res://assets/sounds/footsteps/footstep13.mp3" id="7_6ek82"]
[ext_resource type="AudioStream" uid="uid://ct8ptdasi2u3t" path="res://assets/sounds/footsteps/footstep14.mp3" id="8_stedq"]
[ext_resource type="AudioStream" uid="uid://b0e0xf5mrlwb0" path="res://assets/sounds/footsteps/footstep15.mp3" id="9_ewvjx"]
[ext_resource type="AudioStream" uid="uid://c7bqpdoypkwsx" path="res://assets/sounds/footsteps/footstep16.mp3" id="10_hwg1d"]
[ext_resource type="AudioStream" uid="uid://cwngec8fhnu0h" path="res://assets/sounds/footsteps/footstep17.mp3" id="11_fex7q"]
[ext_resource type="AudioStream" uid="uid://bnxl3x33oewge" path="res://assets/sounds/footsteps/footstep18.mp3" id="12_0tgf6"]
[ext_resource type="AudioStream" uid="uid://clqubv15rcgmr" path="res://assets/sounds/footsteps/footstep19.mp3" id="13_6q55y"]
[ext_resource type="AudioStream" uid="uid://cres5dt4h45d" path="res://assets/sounds/footsteps/footstep20.mp3" id="14_k4byv"]
[ext_resource type="AudioStream" uid="uid://cmnniut7e13uh" path="res://assets/sounds/footsteps/footstep3.mp3" id="15_tw711"]
[ext_resource type="AudioStream" uid="uid://gf3vny2t1rjo" path="res://assets/sounds/footsteps/footstep4.mp3" id="16_j4b3g"]
[ext_resource type="AudioStream" uid="uid://d3cv3hve6dlga" path="res://assets/sounds/footsteps/footstep5.mp3" id="17_egrv6"]
[ext_resource type="AudioStream" uid="uid://brf24mfl1g41v" path="res://assets/sounds/footsteps/footstep6.mp3" id="18_p3tay"]
[ext_resource type="AudioStream" uid="uid://bw7aqyde87uhn" path="res://assets/sounds/footsteps/footstep7.mp3" id="19_yk62b"]
[ext_resource type="AudioStream" uid="uid://by40w3v1osfp4" path="res://assets/sounds/footsteps/footstep8.mp3" id="20_102bq"]
[ext_resource type="AudioStream" uid="uid://hpouru8ls7dl" path="res://assets/sounds/footsteps/footstep9.mp3" id="21_u6pso"]
[ext_resource type="AudioStream" uid="uid://ikonawnc53uk" path="res://assets/sounds/footsteps/footstep10.mp3" id="22_wxa54"]
[ext_resource type="PackedScene" uid="uid://c1goxluh42fgw" path="res://assets/scenes/player/models/model.tscn" id="23_vfskx"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jbuhc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4wqt8"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wxlij"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_frxnh"]
streams_count = 20
stream_0/stream = ExtResource("3_a0wnv")
stream_1/stream = ExtResource("4_0rtyy")
stream_2/stream = ExtResource("15_tw711")
stream_3/stream = ExtResource("16_j4b3g")
stream_4/stream = ExtResource("17_egrv6")
stream_5/stream = ExtResource("18_p3tay")
stream_6/stream = ExtResource("19_yk62b")
stream_7/stream = ExtResource("20_102bq")
stream_8/stream = ExtResource("21_u6pso")
stream_9/stream = ExtResource("22_wxa54")
stream_10/stream = ExtResource("5_fpe8j")
stream_11/stream = ExtResource("6_7eb87")
stream_12/stream = ExtResource("7_6ek82")
stream_13/stream = ExtResource("8_stedq")
stream_14/stream = ExtResource("9_ewvjx")
stream_15/stream = ExtResource("10_hwg1d")
stream_16/stream = ExtResource("11_fex7q")
stream_17/stream = ExtResource("12_0tgf6")
stream_18/stream = ExtResource("13_6q55y")
stream_19/stream = ExtResource("14_k4byv")

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CameraNode", "CameraActual", "ClipboardNode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07633, 2)
script = ExtResource("1_tt18g")
SPEED = 2.0
CameraNode = NodePath("Neck")
CameraActual = NodePath("Neck/Camera3D")
ClipboardNode = NodePath("Neck/Camera3D/Clipboard Container")
CameraShake_Noise = SubResource("FastNoiseLite_jbuhc")
WalkingSway_StepsPerSecond = 2.0
WalkingSway_MaxSwayDistance = 0.005

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_4wqt8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_wxlij")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.667108, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
current = true

[node name="Clipboard Container" type="Node3D" parent="Neck/Camera3D"]

[node name="Clipboard" parent="Neck/Camera3D/Clipboard Container" instance=ExtResource("2_cv7uu")]

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_frxnh")
volume_db = -30.0
unit_size = 3.15

[node name="JumpPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_frxnh")
volume_db = -28.0
unit_size = 3.15
max_polyphony = 2

[node name="model" parent="." instance=ExtResource("23_vfskx")]
transform = Transform3D(-1.225, 0, 1.8497e-07, 0, 1.225, 0, -1.8497e-07, 0, -1.225, 0, -0.989169, 0.156186)
visible = false

[connection signal="step_taken" from="." to="." method="_on_step_taken"]
[connection signal="answerConfirmed" from="Neck/Camera3D/Clipboard Container/Clipboard" to="." method="_on_clipboard_answer_confirmed"]
[connection signal="clipboard_lowered" from="Neck/Camera3D/Clipboard Container/Clipboard" to="." method="_on_clipboard_lowered"]
[connection signal="clipboard_raised" from="Neck/Camera3D/Clipboard Container/Clipboard" to="." method="_on_clipboard_raised"]
